# fileinput.rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: failingiostream.rs  lib.rs  strategy.rs
testdata/: 2
